fix hero height on mobile

--- a/client/src/components/Home/index.scss
+++ b/client/src/components/Home/index.scss
@@ -38,6 +38,7 @@
 		> video {
 			width: 100%;
 			height: 100%;
+			min-height: 300px;
 			margin: 0;
 			padding: 0;
 			display: block;
